Tue Dec  3 22:18:27 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash): detect recursion for all `hash' methods.  each
	  `hash' methods no longer need to use rb_exec_recursive().

Tue Dec  3 21:53:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_catch_protect): new function similar to
	  rb_catch_obj(), but protect from all global jumps like as
	  rb_load_protect(), rb_protect(), etc.

Tue Dec  3 20:18:46 2013  Narihiro Nakamura  <authornari@gmail.com>

	* object.c (rb_obj_clone): Protect FL_PROMOTED and FL_WB_PROTECTED
	  flags of a destination object.

Tue Dec  3 20:16:38 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_hash_rehash): use hash_alloc() instead of rb_hash_new(),
	  to hide temprary object from ObjectSpace.  [Bug #9187]

Tue Dec  3 17:11:47 2013  Aman Gupta <ruby@tmm1.net>

	* load.c (features_index_add_single): Move loaded_features_index array values off
	  the ruby heap. [Bug #9201] [ruby-core:58805]
	* load.c (loaded_features_index_clear_i): Clean up off-heap array structure.
	* vm.c (rb_vm_mark): Remove unnecessary mark_tbl for loaded_features_index.
	  This improves minor GC time by 15% in a large application.

Tue Dec  3 17:01:45 2013  Aman Gupta <ruby@tmm1.net>

	* include/ruby/ruby.h (struct RClass): Add wrapper struct around
	  RClass->m_tbl with serial. This prevents double marking method
	  tables, since many classes/modules can share the same method table.
	  This improves minor mark time in a large application by 30%.
	* internal.h (struct method_table_wrapper): Define new
	  wrapper struct with additional serial.
	* internal.h (RCLASS_M_TBL_INIT): New macro for initializing method
	  table wrapper and st_table.
	* method.h (void rb_sweep_method_entry): Rename rb_free_m_table to
	  rb_free_m_tbl for consistentcy
	* .gdbinit (define rb_method_entry): Update rb_method_entry gdb helper
	  for new method table structure.
	* class.c: Use RCLASS_M_TBL_WRAPPER and
	  RCLASS_M_TBL_INIT macros.